# system-dashboard

./: Cargo.toml
src/: cpu.rs  dashboard.rs  fmt.rs  gpu.rs  header.rs  main.rs  style.rs  system.rs
