[package]
name = "sysinfo"
version = "0.1.0"
authors = ["dan <dancrhorton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
simplelog = "^0.9"
gtk = "^0.9"
gio = "^0.9"
gdk = "^0.13"
glib= "^0.14.0"
chrono = "^0.4.19"
os-release = "0.1.0"
cairo-rs = { version = "^0", features = ["png"] }
systemstat= "^0.1.8"
regex="^1.5.4"