[package]
name = "sys-dashboard"
version = "0.1.0"
authors = ["dan <dancrhorton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
simplelog = "^0.9"
gtk = "^0.9"
gio = "^0.9"
gdk = "^0.13"
glib= "^0.14.0"
chrono = "^0.4.19"
cairo-rs = { version = "^0", features = ["png"] }
regex="^1.5.4"
serde = { version = "^1.0.126", features = ["derive"] }
csv = "^1.1.6"
toml= "^0.5.8"